--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
                     <button class="btn"><i style="padding-right: 5px;" class="fa-solid fa-download"></i><p class="btnp">Download</p></button>
                 </div>
 				<br />
-				<a href="https://github.com/imrglop/latite-releases/releases/latest" align="center"><p>Direct download</p></a>
             </form>
         </div>
     </div>
@@ -111,7 +110,7 @@
                     </div>
                     <div class="accordion-item-body">
                       <div class="accordion-item-body-content">
-                        Click 'TAB' on your keyboard. You can edit this keybind in the next major update!
+                        Click 'I' on your keyboard. You can change this in the settings menu of the UI.
                       </div>
                     </div>
                   </div>
