Fix some HTML errors

--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.css" integrity="sha512-M9yHeAbo9J8KSZVvOi5PEo4WrL6LWxbS+cvh6faIEPPqHQXhxilgCSJ/L2tTqRf73GmI4+tNy8OWSsQuwXc4fw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.9.1/font/bootstrap-icons.css" integrity="sha512-CaTMQoJ49k4vw9XO0VpTBpmMz8XpCWP5JhGmBvuBqCOaOHWENWO1CrVl09u4yp8yBVSID6smD4+gpzDJVQOPwQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.2.0/css/font-awesome.css" integrity="sha512-vTF66+NUFBh1RYzB09CzDYgbCeXhYpaBrydVaSAeYMjlRZ+unsPguBSioDFfMd8n2jYLijqhpJOAhEa0vdcUew==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
+<script src="sources/app.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="background">
             <div class="logo">
                 <div class="image">
-                    <img src="sources/latite.png" class="icon">
+                    <img alt="Latite Icon" src="sources/latite.png" class="icon">
                 </div>
                 <div class="text">
                     <p class="name">Latite Client</p>
@@ -33,11 +35,10 @@
             </div>
             <form action="https://discord.gg/latite" target="_blank">
                 <div class="button">
-                    <button class="btn"><i style="padding-right: 5px;" class="fa-solid fa-download"></i><p class="btnp">Download</p></button>
+                    <button class="btn"><i style="padding-right: 5px;" class="fa-solid fa-download"></i>Download</button>
                 </div>
+                </form>
 				<br />
-				<a href="https://github.com/imrglop/latite-releases/releases/latest" align="center"><p>Direct download</p></a>
-            </form>
         </div>
     </div>
     <div class="bottom">
@@ -144,5 +145,4 @@
         </div>
     </div>
 </body>
-<script src="sources/app.js"></script>
 </html>
