Tutorial video now hosted on GitHub

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="embed">
           <iframe
             class="embedd"
-            src="https://drive.google.com/file/d/1jIM3BWIqoIEPfjZVmWn9BPMPesxnva9l/preview"
+            src="sources/Tutorial.mp4"
             width="854"
             height="480"
             allow="autoplay"
