ok github pages

--- a/not-supported.html
+++ b/not-supported.html
@@ -56,7 +56,14 @@
           <img src="sources/latite.png" class="icon" />
         </div>
         <div class="text">
-          <p class="not-supported">
+          <p
+            style="
+              font-family: 'SegoeUI', sans-serif;
+              color: white;
+              font-size: 50px;
+              text-shadow: 2px 2px 6px #000000;
+            "
+          >
             Latite Client does not support your device
           </p>
         </div>
