Update index.html meta description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       name="description"
-      content="A Legitimate Minecraft Client For Minecraft Windows 10 and 11 Edition"
+      content="Latite Client. A Legitimate Client For Minecraft Windows 10/11 Edition. It features a clean UI, and 30+ mods, like Keystrokes, Zoom, and more!"
     />
     <title>Latite Client</title>
     <link rel="stylesheet" type="text/css" href="sources/style.css" />
