Update tutorial in index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="embed">
           <iframe
             class="embedd"
-            src="sources/Tutorial.mp4"
+            src="sources/latite-dl-tutorial.mp4"
             width="854"
             height="480"
             allow="autoplay"
