--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="keywords"
-      content="Minecraft, Client, Latite, Latite Client, Bedrock Edition, Windows 10 Minecraft"
-    />
-    <meta
-      name="description"
-      content="Latite Client. A Legitimate Client For Minecraft Windows 10/11 Edition. It features a clean UI, and 30+ mods, like Keystrokes, Zoom, and more!"
-    />
+    <meta name="keywords" content="Minecraft, Client, Latite, Latite Client, Bedrock Edition, Windows 10 Minecraft, Mods, Modification, Modifications, Motion Blur, Plugins, Scripts, Keystrokes, Hitbox, HUD, Scripting">
+    <meta name="author" content="Latite Client">
+    <meta property="og:title" content="Latite Client">
+    <meta property="og:type" content="website">
+    <meta name="theme-color" content="#4D57B2">
+    <meta property="og:description" content="Latite Client is a legitimate DLL client For Minecraft Windows 10/11 Edition. It features a Clean UI and 30+ customizable mods, like Motion Blur, Keystrokes, Zoom, and more! Add community made plugins or make your own using our API based on JavaScript/TypeScript!">
+    <meta name="description" content="Latite Client. A Legitimate Client For Minecraft Windows 10/11 Edition. It features a clean UI, and 30+ mods, like Motion Blur, Keystrokes, Zoom, and more!">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1059373077005336656/1059373077835812944/latite-1.png?ex=65c08e8f&is=65ae198f&hm=2071a81318b56e3cf2958b8ca44ddade4599ca10117658f2192e79db8e2af404&">
     <title>Latite Client</title>
     <link rel="stylesheet" type="text/css" href="sources/style.css" />
     <link rel="icon" type="image/png" href="sources/favicon.png" />
