--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@
                     You must join our
                     <a class="links" target="_blank" href="https://discord.gg/GpV3w5tyBs">Discord&nbsp;Server&nbsp;<i
                             class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                    to recieve your rewards.
+                    to receive your rewards.
                 </p>
             </div>
         </div>
