--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="navcontainer">
         <nav>
             <div class="logo">
-                <a href="./index.html" class="homeicon"><img class="navlogo" src="./sources/latite.webp"></a>
+                <a href="./" class="homeicon"><img class="navlogo" src="./sources/latite.webp"></a>
             </div>
             <input type="checkbox" id="click">
             <label for="click" class="menu-btn">
