--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
         <div class="buttonbox">
             <button class="button" onclick="toggleAlertDownlaodButton(); toggleDownload();">
-                Download&nbsp;<i class="fa-solid fa-download"></i>
+                Download&nbsp;V1&nbsp;<i class="fa-solid fa-download"></i>
             </button>
             <form action="https://discord.gg/GpV3w5tyBs" target="_blank">
                 <button class="button-discord" href='https://discord.gg/GpV3w5tyBs' target="_blank">Discord&nbsp;<i
@@ -168,7 +168,7 @@
         <section class="interactive">
             <div class="l-desc-container" data-aos="fade" data-aos-easing="ease-in-out" id="trigger2">
                 <p class="l-section-header">Interactive <span class="l-text-gradient">Demo</span></p>
-                <p class="l-desc">Test out the Latite Client Mod Menu, right in your browser!</p>
+                <p class="l-desc">Test out the Latite Client V2 Mod Menu, right in your browser!</p>
             </div>
             <iframe src="./sources/ModMenu/index.html" class="interiframe" data-aos="fade-down"
                 data-aos-easing="ease-out" data-aos-delay="200" data-aos-anchor="#trigger2">
@@ -701,7 +701,7 @@
                         <i class="fas fa-chevron-down d-arrow"></i>
                     </button>
                     <div id="faqp">
-                        You open the ModMenu by pressing M and clicking the "Mod Settings" button.
+                        You open the Mod Menu by pressing M and clicking the "Mod Settings" button.
                     </div>
                 </div>
 
@@ -712,7 +712,7 @@
                     </button>
                     <div id="faqp">
                         You can change mod positions by pressing M, or by clicking the
-                        <img src="./sources/ModMenu/move.webp" alt="EditHUD" width="20px"> icon in the ModMenu.
+                        <img src="./sources/ModMenu/move.webp" alt="EditHUD" width="20px"> icon in the Mod Menu.
                     </div>
                 </div>
 
