--- a/index.html
+++ b/index.html
@@ -930,14 +930,14 @@
                     <br><br>
                     - Use the Latite name and logo in a showcase, such as a YouTube video.
                     <br>
-                    - Modify the injector for personal use
+                    - Modify the injector for personal use.
                     <br>
-                    - Contribute to this launcher's source by opening a PR/Forking the launcher
+                    - Contribute to the injector's source by opening a PR/Forking the launcher.
                     <br><br>
                     You are <span><strong>not allowed</strong></span> to:
                     <br><br>
                     - Distribute, redistribute or sell any of our files in any form of media. (this only includes our
-                    files that we made. we are not affiliated with Microsoft or Mojang)
+                    files that we made. we are not affiliated with Microsoft or Mojang).
                     <br>
                     - Distribute, redistribute, or sell a modified version of the injector in any form of media.
                     <br>
