update and tweaks

--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
                     data-aos-anchor="#trigger">
                     <div class="desc2">
                         <p class="h1">Many Features</p>
-                        <p class="p1">Pick from 30+ mods, like Motion Blur, Keystrokes, Zoom, and much more!
-                            Through every update we add new features, like Plugins.</p>
+                        <p class="p1">Pick from 30+ mods, like Motion Blur, Zoom, Keystrokes, and much more!
+                            Through every update we add new features to the client.</p>
                     </div>
                     <img src="./sources/modules.webp" alt="List of many Latite Client mods" loading="lazy" class="mods-list">
                 </div>
                 <div class="item item3" data-aos="fade-down" data-aos-easing="ease-out" data-aos-delay="400"
                     data-aos-anchor="#trigger">
                     <div class="desc3">
-                        <p class="h1">Plugin System</p>
+                        <p class="h1">Plugins</p>
                         <p class="p1">Create or get custom mods and commands using our API built on JavaScript and
                             TypeScript.
                         </p>
@@ -178,8 +178,8 @@
                 <span class="disclaimer-btn" onclick="toggleDisclaimer()">Disclaimer</span>
                 <span id="disclaimer-text" style="display: none;">
                     This is just a replication of Latite Client using HTML, CSS and Javascript.
-                    Don't expect all features and functionality to be included in this demo. There will be some
-                    inaccuracies compared to the actual product.
+                    Don't expect all features and functionality to be included in this demo. There a some
+                    inaccuracies compared to the actual client.
                 </span>
             </p>
         </section>
@@ -204,7 +204,7 @@
             <div class="l-desc-container" data-aos="fade" data-aos-easing="ease-in-out" id="trigger4">
                 <p class="l-section-header">Latite Client <span class="l-text-gradient">Launcher</span>
                 </p>
-                <p class="l-desc">Launch Latite Client with ease using our Launcher!</p>
+                <p class="l-desc">Launch Latite Client with ease using our clean Launcher!</p>
             </div>
             <div class="l-gr" data-aos="fade-down" data-aos-easing="ease-out" data-aos-delay="200"
                 data-aos-anchor="#trigger4">
@@ -788,6 +788,7 @@
                             <li>X (formerly Twitter): <a href="https://x.com/@LatiteClient" class="links">@Latite
                                     Client</a></li>
                             <li>Discord: <a href="https://discord.gg/GpV3w5tyBs" class="links">discord.gg/latite</a></li>
+                            <li>YouTube: <a href="https://www.youtube.com/@LatiteClientMC" class="links">@LatiteClientMC</a></li>
                         </ul>
                         <br>
                         Any accounts not including in this list claiming to be Latite Client are
