minor spelling fix

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <span class="disclaimer-btn" onclick="toggleDisclaimer()">Disclaimer</span>
                 <span id="disclaimer-text" style="display: none;">
                     This is just a replication of Latite Client using HTML, CSS and Javascript.
-                    Don't expect all features and functionality to be included in this demo. There a some
+                    Don't expect all features and functionality to be included in this demo. There are
                     inaccuracies compared to the actual client.
                 </span>
             </p>
