--- a/index.html
+++ b/index.html
@@ -908,6 +908,13 @@
                         Use this with other injectors.
                     </li>
                 </ul>
+                <div class="line"></div>
+                <div class="jiayi">
+                    <h2><span>嘉</span>JIAYI LAUNCHER IMPORT</h2>
+                    <p>Import the latest version of Latite Client (1.20.6x) into Jiayi Launcher, with one click!</p>
+                    <a href="jiayi://addmod/https://github.com/Imrglop/Latite-Releases/releases/download/v1.6.0/Latite.1.20.60.dll"><button class="jiayi-import">Import to Jiayi</button></a>
+                </div>
+                <div class="line"></div>
                 Latite Client Download Tutorial:
                 <a class="links" target="_blank" href="https://youtu.be/h3v849ayuZY">
                     https://youtu.be/h3v849ayuZY&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i>
