--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
                 <div class="line"></div>
                 <div class="jiayi">
                     <h2><span>嘉</span>JIAYI LAUNCHER IMPORT</h2>
-                    <p>Import the latest version of Latite Client (1.20.6x) into Jiayi Launcher, with one click!</p>
+                    <p>Import the latest version of Latite Client (1.20.6x) directly into Jiayi Launcher, with one click! Check it out <a href="https://github.com/JiayiSoftware/JiayiLauncher" target="_blank"><strong>here</strong>&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
                     <a href="jiayi://addmod/https://github.com/Imrglop/Latite-Releases/releases/download/v1.6.0/Latite.1.20.60.dll"><button class="jiayi-import">Import to Jiayi</button></a>
                 </div>
                 <div class="line"></div>
