--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
                                 class="fa-solid fa-arrow-up-right-from-square"></i>
                         </a>
                         <br>
-                        The legacy Latite Injector. If you encounter any issues with the main injector (below), use
+                        The legacy Latite Injector. If you encounter any issues with the main injector (above), use
                         this.
                     </li>
                     <li>
