improved download popup

--- a/index.html
+++ b/index.html
@@ -870,49 +870,65 @@
                 <i class="bi bi-x-lg" onclick="closeDownload()"></i>
             </div>
             <div class="overlay-content dl">
-                <ul>
-                    <li>
-                        <a class="links" target="_blank"
-                            href="https://github.com/Imrglop/Latite-Releases/raw/main/injector/Injector.exe">
-                            <strong>Latite Injector</strong>&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        </a>
-                        <br>
-                        Use this to launch Latite. The injector might be flagged as a virus,
-                        so make sure you exclude the injector from your antivirus if needed
-                    </li>
-                    <li>
-                        <a class="links" target="_blank"
-                            href="https://github.com/Imrglop/Latite-Releases/raw/deb4542e2f33c072594373e6c48aeb5d5f0ad08e/injector/Injector.exe">
-                            <strong>Legacy Latite Injector</strong>&nbsp;<i
-                                class="fa-solid fa-arrow-up-right-from-square"></i>
-                        </a>
-                        <br>
-                        The legacy Latite Injector. If you encounter any issues with the main injector (above), use
-                        this.
-                    </li>
-                    <li>
-                        <a class="links" target="_blank"
-                            href="https://latite-client.is-from.space/r/Latite_Minimal.exe">
-                            <strong>Latite Minimal</strong>&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        </a>
-                        <br>
-                        Use this if you have any issues with false virus detections, or your
-                        country (like India) has blocked github.
-                    </li>
-                    <li>
-                        <a class="links" target="_blank"
-                            href="https://github.com/Imrglop/Latite-Releases/releases/latest">
-                            <strong>DLL Download</strong>&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i>
-                        </a>
-                        <br>
-                        Use this with other injectors.
-                    </li>
-                </ul>
                 <div class="line"></div>
-                <div class="jiayi">
+                <div class="widget latitewidget">
+                    <img class="dlgradient" src="./sources/dlgradient.png">
+                    <h2><span><img src="./sources/latite.webp"></span>Latite Launcher</h2>
+                    <p>Click below to download Latite's Official Launcher!</p>
+                    <a href="https://github.com/Imrglop/Latite-Releases/raw/main/injector/Injector.exe" target="_blank"><button class="latite-dl">Download</button></a>
+                </div>
+                <div class="line"></div>
+                <div class="widget jiayi">
                     <h2><span>嘉</span>JIAYI LAUNCHER IMPORT</h2>
-                    <p>Import the latest version of Latite Client (1.20.6x) directly into Jiayi Launcher, with one click! Check out the launcher <a href="https://github.com/JiayiSoftware/JiayiLauncher" target="_blank"><strong>here</strong>&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+                    <p>Click below to import the latest version of Latite Client into Jiayi. Check out the app <a href="https://github.com/JiayiSoftware/JiayiLauncher" target="_blank"><strong>here</strong>&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
                     <a href="jiayi://addmod/https://github.com/Imrglop/Latite-Releases/releases/download/v1.6.0/Latite.1.20.60.dll"><button class="jiayi-import">Import to Jiayi</button></a>
+                </div>
+                <div class="line"></div>
+                <div class="dropdown-title">
+                    <button class="dropdown-dl-button">
+                        <span>Other Download Options</span>
+                        <i class="fas fa-chevron-down d-arrow"></i>
+                    </button>
+                    <div id="dropdownul">
+                        <ul>
+                            <!-- <li>
+                                <a class="links" target="_blank"
+                                    href="https://github.com/Imrglop/Latite-Releases/raw/main/injector/Injector.exe">
+                                    <strong>Latite Injector</strong>&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                </a>
+                                <br>
+                                Use this to launch Latite. The injector might be flagged as a virus,
+                                so make sure you exclude the injector from your antivirus if needed
+                            </li> -->
+                            <li>
+                                <a class="links" target="_blank"
+                                    href="https://github.com/Imrglop/Latite-Releases/raw/deb4542e2f33c072594373e6c48aeb5d5f0ad08e/injector/Injector.exe">
+                                    <strong>Legacy Latite Injector</strong>&nbsp;<i
+                                        class="fa-solid fa-arrow-up-right-from-square"></i>
+                                </a>
+                                <br>
+                                The legacy Latite Injector. If you encounter any issues with the main injector (above), use
+                                this.
+                            </li>
+                            <li>
+                                <a class="links" target="_blank"
+                                    href="https://latite-client.is-from.space/r/Latite_Minimal.exe">
+                                    <strong>Latite Minimal</strong>&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                </a>
+                                <br>
+                                Use this if you have any issues with false virus detections, or your
+                                country (like India) has blocked github.
+                            </li>
+                            <li>
+                                <a class="links" target="_blank"
+                                    href="https://github.com/Imrglop/Latite-Releases/releases/latest">
+                                    <strong>DLL Download</strong>&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                </a>
+                                <br>
+                                Use this with other injectors.
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="line"></div>
                 Latite Client Download Tutorial:
