true launcher screenshot

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             </div>
             <div class="l-gr" data-aos="fade-down" data-aos-easing="ease-out" data-aos-delay="200"
                 data-aos-anchor="#trigger4">
-                <img src="./sources/launcher.webp" alt="Latite Client Launcher" loading="lazy" class="launcher-img">
+                <img src="./sources/launcher.png" alt="Latite Client Launcher" loading="lazy" class="launcher-img">
                 <img src="sources/bgradient.webp" class="bgradient2">
             </div>
         </section>
