--- a/index.html
+++ b/index.html
@@ -878,11 +878,6 @@
                     <a href="https://github.com/Imrglop/Latite-Releases/raw/main/injector/Injector.exe" target="_blank"><button class="latite-dl">Download</button></a>
                 </div>
                 <div class="line"></div>
-                <div class="widget jiayi">
-                    <h2><span>嘉</span>JIAYI LAUNCHER IMPORT</h2>
-                    <p>Click below to import the latest version of Latite Client into Jiayi. Check out the app <a href="https://github.com/JiayiSoftware/JiayiLauncher" target="_blank"><strong>here</strong>&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
-                    <a href="jiayi://addmod/https://github.com/Imrglop/Latite-Releases/releases/download/v1.6.0/Latite.1.20.60.dll"><button class="jiayi-import">Import to Jiayi</button></a>
-                </div>
                 <div class="line"></div>
                 <div class="dropdown-title">
                     <button class="dropdown-dl-button">
@@ -926,6 +921,17 @@
                                 </a>
                                 <br>
                                 Use this with other injectors.
+                            </li>
+
+                            <li>
+
+                                <a class="links" target="_blank"
+                                    href="jiayi://addmod/https://github.com/Imrglop/Latite-Releases/releases/download/v1.6.0/Latite.1.20.60.dll">
+                                    <strong>Jiayi Launcher Import</strong>&nbsp;<i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                </a>
+                                <br>
+
+                                <p>Click below to import the latest version of Latite Client into <a href="https://github.com/JiayiSoftware/JiayiLauncher" target="_blank" class="links">Jiayi Launcher&nbsp;</a><i class="fa-solid fa-arrow-up-right-from-square"></i></p>
                             </li>
                         </ul>
                     </div>
